--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
+    "tone": "^13.4.9",
     "two.js": "^0.7.0-beta.3"
   },
   "scripts": {
